[tool.poetry]
name = "stable_discord"
version = "0.1.0"
description = ""
authors = ["Dan Kleeman <dan.kleeman.git@pm.me>"]
readme = "README.md"
packages = [{include = "stable_discord"}]

[tool.poetry.dependencies]
python = "^3.10"
discord-py = "^2.2.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pylint = "^2.17.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest = "^7.2.2"

[tool.black]
line-length=120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint.basic]
argument-rgx="^[_a-z][_a-z0-9]{0,30}$"
variable-rgx="^[_a-z][_a-z0-9]{0,30}$"
max-line-length = "120"
disable = [
    "missing-module-docstring",
    "fixme"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
